Fix erroneous termination condition when reading long lines.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=697133 .